# fast-json-transform

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
fast_json_transform/: __init__.py  core.py
tests/: test_fast_json_transform.py
